# libcordabra

./: .gitignore  .gitmodules  Doxyfile  README.md  libdiscordpp.hpp
src/: .clang  CMakeLists.txt  discordclient.cpp  discordclient.hpp  endpoints.cpp  endpoints.hpp  libcordabra  libdiscordpp  token.cpp  token.hpp
src/events/: event.hpp
src/gateway/: decoder.hpp  gateway.cpp  gateway.hpp
src/gateway/decoder/: json.cpp  json.hpp
src/rest/: rest.cpp  rest.hpp
